--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -32,8 +32,6 @@
       padding: 0px 90px;
 
     }
-
-   
     
   }
 
@@ -55,4 +53,11 @@
     font-size: 30px;
     font-weight: 600;
     color:black;
+  }
+
+  @media (max-width: 768px) {
+    .links a{
+      font-size: 20px;
+    }
+
   }
