--- a/src/stylesheets/ProjectShowcase.css
+++ b/src/stylesheets/ProjectShowcase.css
@@ -88,5 +88,8 @@
     .project-header h2{
         font-size: 20px;
     }
+    .project-showcase-container{
+        margin-top: 50px;
+    }
   }
   
